@@ -39,13 +39,16 @@ public class ERXDividingNumberFormatter extends NSNumberFormatter {
     /* (non-Javadoc)
      * @see com.webobjects.foundation.NSNumberFormatter#pattern()
      */
+    @Override
     public String pattern() {
         String pattern = super.pattern();
         return pattern;
     }
+
     /* (non-Javadoc)
      * @see com.webobjects.foundation.NSNumberFormatter#setPattern(java.lang.String)
      */
+    @Override
     public void setPattern(String pattern) {
         
         try {
@@ -68,9 +71,11 @@ public class ERXDividingNumberFormatter extends NSNumberFormatter {
             " where 1024 is the factor.");
         }
     }
+
     /* (non-Javadoc)
      * @see java.text.Format#format(java.lang.Object, java.lang.StringBuffer, java.text.FieldPosition)
      */
+    @Override
     public StringBuffer format(Object arg0, StringBuffer arg1,
             FieldPosition arg2) {
         if (!(arg0 instanceof Number)) {
@@ -88,7 +93,7 @@ public class ERXDividingNumberFormatter extends NSNumberFormatter {
         } else {
             double d = n.doubleValue();
             d /= (double)factor;
-            return super.format(new Double(d), arg1, arg2);
+            return super.format(Double.valueOf(d), arg1, arg2);
         }
     }
 }
